tests/ui/singleton-f-4.stderr
error: function argument #1 (type: usize) does not have an identifier
  --> $DIR/singleton-f-4.rs:22:37
   |
22 |     pub async fn get_set(&mut self, _: usize, _: i32) -> Option<i32> {
   |                                     ^
